--- a/build.gradle
+++ b/build.gradle
@@ -28,6 +28,9 @@ repositories {
 
 
 dependencies {
+    compileOnly 'org.projectlombok:lombok:1.18.2'
+    compile group: 'com.alibaba', name: 'fastjson', version: '1.2.54'
+    
     compile 'org.springframework.boot:spring-boot-starter-actuator'
     compile 'org.springframework.boot:spring-boot-starter-web'
 
